pandora-feb-2026

# -----------------------------------------
# SETTING UP VNC  19 Feb
# ----------------------------------------
# 1. login to a gpvm and open bash profile
emacs -nw ~/.bash_profile

# 2. add this at the end of your bash profile
VNCNUM=40                                                                                                              
if [[ `hostname` == *"gpvm"* ]]                                                                               
then
  export DISPLAY=":$VNCNUM"                                                                                                          
  if [ `lsof -i -P -n | grep $(expr 5900 + ${VNCNUM}) | wc -l` -eq 0 -o `lsof -i -P -n | grep $(expr 6000 + ${VNCNUM}) | wc -l` -eq 0 ]
  then
    echo "vncserver :$VNCNUM not running.  Starting now...."
    vncserver :$VNCNUM -geometry 2880x1800 -localhost -bs                                           
  else
    echo "vncserver :$VNCNUM already running (hopefully owned by you).  Not attempting to start the vncserver..."
  fi
fi

# 3. Remove forgotten password
rm  $HOME/.vnc/passwd

# 4. Exit gpvm
exit

# 5. Laptop: new terminal window
emacs -nw ~/.ssh/config

# 6. Add the following at the bottom of config, swapping YOURUSERNAME for your username, eg I have User lasquith
Host dunegpvm06
  HostName dunegpvm06.fnal.gov
  User YOURUSERNAME
  ForwardAgent yes
  ForwardX11 yes
  ForwardX11Trusted yes
  GSSAPIAuthentication yes
  GSSAPIDelegateCredentials yes
  LocalForward 5901 localhost:5940

# 7. On laptop, login to gpvm using specified alias

# do usual kinit
ssh -Y dunegpvm06

# 8. now it will ask to set a VNC password which must be no more than 8 characters. I said no when it asked me if pwd should be read only

# 9. On gpvm

cd /exp/dune/app/users/${USER}/git/test-vnc

/cvmfs/oasis.opensciencegrid.org/mis/apptainer/current/bin/apptainer shell --shell=/bin/bash -B /cvmfs,/exp,/nashome,/pnfs/dune,/opt,/run/user,/etc/hostname,/etc/hosts,/etc/krb5.conf --ipc --pid /cvmfs/singularity.opensciencegrid.org/fermilab/fnal-dev-sl7:latest

source /cvmfs/dune.opensciencegrid.org/products/dune/setup_dune.sh

setup root "v6_28_12" -q "e26:p3915:prof"

export DISPLAY=:40

root -l

TBrowser b

# 10. On laptop: download RealVNC
https://www.realvnc.com/en/connect/download/viewer/?lai_vid=63x3vVeqpI2Or&lai_sr=5-9&lai_sl=l

# 11. On laptop
open vnc://localhost:5901

# popup asks for password. Enter the password you set when you logged into gpvm in step #8

---------------------------------------------------------------
# PANDORA EVDs
---------------------------------------------------------------
# kinit as usual

ssh -Y dunegpvm06

/cvmfs/oasis.opensciencegrid.org/mis/apptainer/current/bin/apptainer shell --shell=/bin/bash -B /cvmfs,/exp,/nashome,/pnfs/dune,/opt,/run/user,/etc/hostname,/etc/hosts,/etc/krb5.conf --ipc --pid /cvmfs/singularity.opensciencegrid.org/fermilab/fnal-dev-sl7:latest

source /cvmfs/dune.opensciencegrid.org/products/dune/setup_dune.sh

setup dunesw "v10_17_01d00" -q "e26:prof"
setup cmake "v3_27_4"
setup gcc "v12_1_0"
setup tbb "v2021_9_0" -q "e26"
setup root "v6_28_12" -q "e26:p3915:prof"

# need this AFTER settign up root. Sometimes works, sometimes doesn't. LOL.
export DISPLAY=:41

cd /exp/dune/app/users/${USER}/git/nd_pandora 

# only once - this is Lily's modded setup
cp /exp/dune/app/users/lasquith/git/nd_pandora/pandora_setup1.sh pandora_setup.sh

source pandora_setup.sh -n -p /exp/dune/app/users/${USER}/git/nd_pandora


# I feel like this is new
cd /exp/dune/data/users/${USER}/nd_pandora/

# make folders for event displays: these names hardcoded in the modded XML 
mkdir evds
mkdir evds_reco

# Lily's modded xml file *CHANGES NEEDED FOR LAUREN*
cp /exp/dune/app/users/lasquith/git/nd_pandora/LArRecoND/settings/PandoraSettings_LArRecoND_ThreeD.xml /exp/dune/app/users/${USER}/git/nd_pandora/LArRecoND/settings/PandoraSettings_LArRecoND_ThreeD.xml

# change lasquith to your user name in these two places
<SaveEventPath> /exp/dune/data/users/lasquith/nd_pandora/evds/ </SaveEventPath>
<SaveEventPath> /exp/dune/data/users/lasquith/nd_pandora/evds_reco/ </SaveEventPath>

# make a soft link to interface - only needed once
ln -s /exp/dune/app/users/${USER}/git/nd_pandora/LArRecoND/build/PandoraInterface PandoraInterface

# run
./PandoraInterface -r "AllHitsSliceNu" -i /exp/dune/app/users/${USER}/git/nd_pandora/LArRecoND/settings/PandoraSettings_LArRecoND_ThreeD.xml -e 2x2_events.root -g 2x2_geo.root -p -N -n 1

# then on laptop can copy over the evds:
# new terminal, do kinit, then:

scp lasquith@dunegpvm05.fnal.gov:/exp/dune/data/users/lasquith/nd_pandora/evds_reco/* .
scp lasquith@dunegpvm05.fnal.gov:/exp/dune/data/users/lasquith/nd_pandora/evds/* .

# but with your username instead of lasquith in four places












--------------------------------------------------------------------------------------
# 12 Feb
--------------------------------------------------------------------------------------

# Ryan pandora tutorial
# https://gist.github.com/CrossR/2c2231fac2fc28d9082db111dcc3cec1

# now trying to merge in the larsfot stuff

/cvmfs/oasis.opensciencegrid.org/mis/apptainer/current/bin/apptainer shell --shell=/bin/bash -B /cvmfs,/exp,/nashome,/pnfs/dune,/opt,/run/user,/etc/hostname,/etc/hosts,/etc/krb5.conf --ipc --pid /cvmfs/singularity.opensciencegrid.org/fermilab/fnal-dev-sl7:latest

source /cvmfs/dune.opensciencegrid.org/products/dune/setup_dune.sh

setup dunesw "v10_17_01d00" -q "e26:prof"
setup cmake "v3_27_4"
setup gcc "v12_1_0"
setup tbb "v2021_9_0" -q "e26"
setup root "v6_28_12" -q "e26:p3915:prof"

cd /exp/dune/app/users/${USER}/git/nd_pandora/dev
mrb newDev -v v10_17_01d00 -q prof:e26
source /exp/dune/app/users/lasquith/git/nd_pandora/dev/localProducts_larsoft_v10_17_01d00_prof_e26/setup
cd srcs
mrb g sbndcode
cd $MRB_SOURCE/sbndcode
git checkout uk_larsoft_workshop_2025


# lar -c prodsingle_sbnd.fcl -n 5 -o $HOME/data/test.root





#### 1. Error ###
python3 pandora_build.py -o /exp/dune/app/users/${USER}/git/nd_pandora --build_near_detector --larsoft_libtorch

# ===== FIX FROM RYAN ==== #
wget https://gist.githubusercontent.com/CrossR/2c2231fac2fc28d9082db111dcc3cec1/raw/9a1e58ccfbb3919c55474c238a8b4d8928749c21/pandora_build.py

### typo PandoraInterface not aliased, replace
PandoraInterface -r "AllHitsSliceNu" -i /exp/dune/app/users/${USER}/git/nd_pandora/LArRecoND/settings/PandoraSettings_LArRecoND_ThreeD.xml -e 2x2_events.root -g 2x2_geo.root -p -N -n 1
# with
./LArRecoND/build/PandoraInterface -r "AllHitsSliceNu" -i /exp/dune/app/users/${USER}/git/nd_pandora/LArRecoND/settings/PandoraSettings_LArRecoND_ThreeD.xml -e 2x2_events.root -g 2x2_geo.root -p -N -n 1


# === HANGS ON Select best slice hypotheses - SEE DEETS [A]

# What's happening:

# required flags:
# -r "AllHitsSliceNu"      [Full, AllHitsCR, AllHitsNu, CRRemHitsSliceCR, CRRemHitsSliceNu, AllHitsSliceCR, AllHitsSliceNu]
# what is CRRem ? CR?
# Cosmic Rays!? Cosmic Rays removed?!




#----------------------#
#     DEETS  [A]       #  
#----------------------#
### NON-ERROR (we think!) ERROR: ###
# this:
/cvmfs/larsoft.opensciencegrid.org/products/root/v6_28_12/Linux64bit+3.10-2.17-e26-p3915-prof/etc/cling/std.modulemap:277:12: error: header 'optional' not found

# then 
input_line_1:1:10: note: submodule of top-level module 'std' implicitly imported here
#include <new>
         ^
Warning in cling::IncrementalParser::CheckABICompatibility():
  Failed to extract C++ standard library version.
Replaced symbol atexit cannot be found in JIT!
Replaced symbol at_quick_exit cannot be found in JIT!

# then loads of cling borks, eg:
IncrementalExecutor::executeFunction: symbol '_ZN5cling7runtime6gClingE' unresolved while linking [cling interface function]!

# then the usual root rubbish about unknown branches 

# then event processing starts, quickly gets to here
Start event is 0 and end event is 0

   PROCESSING EVENT: 0

Hit list sizes: 2130, 2130, 2106, 2130
Should run slicing? 1
There are 1 volumes
- Volume has 8520 hits
Running slicing worker instance
Hit list sizes: 2130, 2130, 2106, 2130
Making clusters from 2130 3D hits
Running 3D hit assignment
Pfo 0x26701c20: created cluster 0x2638af10 with 17 hits
# blah blah blah
Identified 1 slice(s)
Running nu worker instance for slice 1 of 1
Hit list sizes: 2130, 2130, 2106, 2130
Making clusters from 2130 3D hits
Running 3D hit assignment
Pfo 0x262c7f50: created cluster 0x27239e10 with 57 hits
# blah blah blah
Running 3D hit assignment
Pfo 0x262c7f50: created cluster 0x270f0a60 with 111 hits
# blah blah blah
Running 3D hit assignment
Pfo 0x262c7f50: created cluster 0x274350c0 with 111 hits
# blah blah blah
Select best slice hypotheses

# then hang.
